--- a/apps/front/src/app/signup/i18n/es.json
+++ b/apps/front/src/app/signup/i18n/es.json
@@ -3,5 +3,8 @@
   "user": "Nombre de usuario",
   "mail": "Email",
   "password": "Contraseña",
-  "repeatPassword": "Confirma la contraseña"
+  "repeatPassword": "Confirma la contraseña",
+  "unavailableUsername": "Usuario ya existente",
+  "requiredField": "Campo obligatorio",
+  "minMaxLength": "De {{min}} a {{max}} caracteres"
 }
