language picker and logout reducer

--- a/apps/front/src/assets/i18n/es.json
+++ b/apps/front/src/assets/i18n/es.json
@@ -1,5 +1,7 @@
 {
   "submit": "Enviar",
+  "confirm": "Confirmar",
+  "cancel": "Cancelar",
   "requiredField": "Campo obligatorio",
   "doLogin": "Inicia sesión",
   "doSignup": "Regístrate",
